--- a/Oniria/Views/Shared/Layouts/Base/_LayoutStyles.cshtml
+++ b/Oniria/Views/Shared/Layouts/Base/_LayoutStyles.cshtml
@@ -4,3 +4,5 @@
 <link rel="stylesheet" href="~/css/fontImports.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/fontClasses.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/Oniria.styles.css" asp-append-version="true" />
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
