--- a/Oniria/Views/Shared/Layouts/Base/_LayoutScripts.cshtml
+++ b/Oniria/Views/Shared/Layouts/Base/_LayoutScripts.cshtml
@@ -2,6 +2,7 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await Component.InvokeAsync("NToastNotify")
 @{
