--- a/Oniria/Views/Shared/Layouts/Base/_LayoutStyles.cshtml
+++ b/Oniria/Views/Shared/Layouts/Base/_LayoutStyles.cshtml
@@ -6,3 +6,5 @@
 <link rel="stylesheet" href="~/Oniria.styles.css" asp-append-version="true" />
 <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.css">
