--- a/Oniria/Views/Home/Index.cshtml
+++ b/Oniria/Views/Home/Index.cshtml
@@ -195,7 +195,11 @@
         width: 3em;
         margin-top: -1em;
         padding-bottom: 1em;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
+
 
     .infotop {
         text-align: center;
